# GEA-Raylib-Race

./: README.md
Race/: CMakeLists.txt  main.cpp
Race/Data/LevelData/: Level1.json  Level2.json
Race/Data/Shaders/: billboard.fs
Race/Resources/LevelData/: Level1.json  Level2.json  Level3.json
Race/Resources/Models/: 1385 Jeep.mtl  Gate.mtl  overhead.mtl
Race/src/: Game.cpp  Game.h  Race.cpp  Race.h
Race/src/GameObject/: Button.cpp  Button.h  Car.cpp  Car.h  GameObject.cpp  GameObject.h  Gate.cpp  Gate.h  MyBoundingBox.cpp  MyBoundingBox.h
Race/src/RaceCreator/: Gate.cpp  Gate.h  Minimap.cpp  Minimap.h  MinimapContainer.cpp  MinimapContainer.h  PlacementContainer.cpp  PlacementContainer.h  Race.cpp  Race.h  RacerAI.cpp  RacerAI.h
